--- a/mod.conf
+++ b/mod.conf
@@ -1,2 +1,5 @@
 name = xp
-description =  Private XP mod.
+title = XP
+description = An experience system (XP) with shop, rewards, levels, and much more.
+depends = default, wool, farming, doors, bucket, carts, fire, xpanes, mobs, mobs_monster
+optional_depends = unified_inventory, mobs_bat, spawners_mobs, legendary_ore, rainbow_ore, moreores, lapis, atium
