Various improvements and changes

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,4 @@
 name = xp
 title = XP
 description = An experience system (XP) with shop, rewards, levels, and much more.
-depends = default, wool, farming, doors, bucket, carts, fire, xpanes
-optional_depends = unified_inventory, mobs_bat, spawners_mobs, legendary_ore, rainbow_ore, moreores, lapis, atium, mobs, mobs_monster
+optional_depends = default, wool, farming, doors, bucket, carts, fire, xpanes, unified_inventory, mobs_bat, spawners_mobs, legendary_ore, rainbow_ore, moreores, lapis, atium, mobs_monster
